--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 html,
 body {
+    overflow-x: hidden;
     -webkit-tap-highlight-color: transparent;
 }
 
@@ -68,21 +69,6 @@ body {
     }
 }
 
-/* MOVE SVG */
-@keyframes moveDown {
-    0% {
-        transform: translateY(0);
-    }
-
-    100% {
-        transform: translateY(20px);
-    }
-}
-
-.svg-animation {
-    animation: moveDown 0.5s forwards;
-}
-
 .btn-contact-rel {
     position: relative;
     right: 450px;
@@ -97,4 +83,11 @@ body {
 .border-beige {
     border-right: 4px solid #FFF6E4;
     border-left: 4px solid #FFF6E4;
+}
+
+@media screen and (max-width: 640px) {
+    .heading-responsive {
+        font-size: 1.5rem/* 24px */;
+        line-height: 2rem/* 32px */;
+    }
 }
