--- a/src/index.css
+++ b/src/index.css
@@ -85,9 +85,40 @@ body {
     border-left: 4px solid #FFF6E4;
 }
 
+@keyframes rotateAnimation {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.animate-rotate {
+    animation: rotateAnimation 1s ease-in-out forwards;
+}
+
 @media screen and (max-width: 640px) {
     .heading-responsive {
-        font-size: 1.5rem/* 24px */;
-        line-height: 2rem/* 32px */;
+
+        font-size: 1rem
+            /* 16px */
+        ;
+        line-height: 1.5rem
+            /* 24px */
+        ;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .heading-responsive {
+
+        font-size: 1rem
+            /* 16px */
+        ;
+        line-height: 1.5rem
+            /* 24px */
+        ;
     }
 }
