--- a/src/index.css
+++ b/src/index.css
@@ -26,14 +26,15 @@ body {
     background-image: url('./assets/pexels-google-deepmind-18068537.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 89vh;
+    height: 90dvh;
 }
 
 .image-navi-studio-contact {
-    background-repeat: no-repeat;
     height: 30vh;
+    background-size: 100%;
+    background-position: center;
     border-radius: 0px 0px 0px 190px;
-    background: url("./assets/rectangle_top.png"), lightgray -46.697px -768.547px / 106.886% 974.977%;
+    background: url("./assets/rectangle_top.png"), lightgray -46.697px -768.547px / 106.886% 974.977% no-repeat;
 }
 
 /* TEXT ANIMATE */
@@ -104,30 +105,6 @@ body {
 
 .animate-rotate {
     animation: rotateAnimation 1s ease-in-out forwards;
-}
-
-@media screen and (max-width: 640px) {
-    .heading-responsive {
-
-        font-size: 1rem
-            /* 16px */
-        ;
-        line-height: 1.5rem
-            /* 24px */
-        ;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .heading-responsive {
-
-        font-size: 1rem
-            /* 16px */
-        ;
-        line-height: 1.5rem
-            /* 24px */
-        ;
-    }
 }
 
 .h-f {
