--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ body {
     background-image: url('./assets/pexels-google-deepmind-18068537.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 90dvh;
+    height: 100vh;
 }
 
 .image-navi-studio-contact {
