--- a/src/index.css
+++ b/src/index.css
@@ -45,19 +45,24 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
+    height: auto;
+    display: block;
+    max-width: 100%;
 }
 
 .image-navi-studio-contact {
     height: 30vh;
-    background-size: 100%;
     background-position: center;
     border-radius: 0px 0px 0px 190px;
     background: url("./assets/rectangle_top.png"), lightgray -46.697px -768.547px / 106.886% 974.977% no-repeat;
 }
 
 .animation-scrolling-rtl {
+    display: inline-block;
+    padding-right: 2em;                 
+    padding-left: 100%;    
     white-space: nowrap;
-    animation: scrolling-rtl 17s infinite linear;
+    animation: scrolling-rtl 20s infinite linear;
 }
 
 @keyframes scrolling-rtl {
@@ -124,4 +129,3 @@ body {
     left: -5rem;
     top: -29rem;
 }
-
