--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Aoboshi+One&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -20,7 +22,14 @@ body {
     background: #C22E2E;
 }
 
-/* Z-INDEX */
+.number {
+    font-family: 'Aoboshi One', serif;
+}
+
+.text-arial {
+    font-family: Arial, sans-serif;
+}
+
 .z-max {
     z-index: 50 !important;
 }
@@ -40,11 +49,17 @@ body {
     }
 }
 
+.input-with-svg {
+    background-image: url('./assets/Arrow\ 3.svg');
+    background-repeat: no-repeat;
+    background-position: right center; 
+    padding-right: 30px;
+  }
+
 .image-navi-studio {
     background-image: url('./assets/pexels-google-deepmind-18068537.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
     height: auto;
     display: block;
     max-width: 100%;
@@ -52,15 +67,14 @@ body {
 
 .image-navi-studio-contact {
     height: 30vh;
-    background-position: center;
-    border-radius: 0px 0px 0px 190px;
-    background: url("./assets/rectangle_top.png"), lightgray -46.697px -768.547px / 106.886% 974.977% no-repeat;
+    border-radius: 0px 0px 0px 181px;
+    background: url("./assets/bg-contact.png"), lightgray -1432.171px -108.115px / 298.913% 133.472% no-repeat;
 }
 
 .animation-scrolling-rtl {
     display: inline-block;
-    padding-right: 2em;                 
-    padding-left: 100%;    
+    padding-right: 2em;
+    padding-left: 100%;
     white-space: nowrap;
     animation: scrolling-rtl 20s infinite linear;
 }
