[ADD] float svg

--- a/src/index.css
+++ b/src/index.css
@@ -52,9 +52,9 @@ body {
 .input-with-svg {
     background-image: url('./assets/Arrow\ 3.svg');
     background-repeat: no-repeat;
-    background-position: right center; 
+    background-position: right center;
     padding-right: 30px;
-  }
+}
 
 .image-navi-studio {
     background-image: url('./assets/pexels-google-deepmind-18068537.jpg');
@@ -68,7 +68,7 @@ body {
 .image-navi-studio-contact {
     height: 30vh;
     border-radius: 0px 0px 0px 181px;
-    background: url("./assets/bg-contact.png"), lightgray -1432.171px -108.115px / 298.913% 133.472% no-repeat;
+    background: url("./assets/photo-contact.png"), lightgray -1432.171px -108.115px / 298.913% 133.472% no-repeat;
 }
 
 .animation-scrolling-rtl {
@@ -142,4 +142,23 @@ body {
 .svg-other {
     left: -5rem;
     top: -29rem;
+}
+
+.left-svg {
+    left: 38rem;
+}
+
+
+.float-svg {
+    position: fixed;
+    top: 50%;
+    left: -50px;
+    z-index: 50 !important;
+    animation: float 5s linear infinite alternate;
+}
+
+@keyframes float {
+    to {
+        left: 100%;
+    }
 }
