--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,12 @@ body {
     padding-right: 30px;
 }
 
+.image-navi-studio-agency {
+    height: 30vh;
+    border-radius: 0px 0px 0px 190px;
+    background: url("./assets/Rectangle_41.png"), lightgray -46.697px -768.547px / 106.886% 974.977% no-repeat;
+}
+
 .image-navi-studio {
     background-image: url('./assets/pexels-google-deepmind-18068537.jpg');
     background-repeat: no-repeat;
