[ADD] svg agency

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,20 @@ body {
     }
 }
 
+.p {
+    width: 248px;
+    height: 230px;
+    background-repeat: no-repeat;
+    background-image: url("./assets/P.png");
+}
+
+.z {
+    width: 320px;
+    height: 230px;
+    background-repeat: no-repeat;
+    background-image: url("./assets/z.png");
+}
+
 .input-with-svg {
     background-image: url('./assets/Arrow\ 3.svg');
     background-repeat: no-repeat;
