--- a/src/index.css
+++ b/src/index.css
@@ -196,3 +196,12 @@ button {
     background-color: black;
     flex-direction: column;
 }
+
+@media screen and (max-width: 1024px) {
+
+    .test-res {
+        display: flex;
+        flex-direction: column;
+    }
+    
+}
