--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,12 @@ button {
     padding-right: 30px;
 } */
 
+.logo {
+    background-image: url("./assets/logo-bit.png");
+    height: 40px;
+    width: 40px;
+}
+
 .image-navi-studio-agency {
     height: 30vh;
     border-radius: 0px 0px 0px 190px;
