--- a/src/index.css
+++ b/src/index.css
@@ -43,21 +43,6 @@ button {
     z-index: 50 !important;
 }
 
-.fade-in {
-    opacity: 0;
-    animation: fade-in-animation 1s ease-in forwards;
-}
-
-@keyframes fade-in-animation {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
 .p {
     width: 248px;
     height: 230px;
@@ -95,6 +80,14 @@ button {
     max-width: 100%;
 }
 
+.image-navi-studio-n-services {
+    background-image: url('./assets/bg-services.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: auto;
+    display: block;
+    max-width: 100%;
+}
 
 .bg-contact-blur {
     background-image: url('./assets/bg-contact-blur.png');
@@ -108,6 +101,15 @@ button {
     max-width: 100%;
     border-radius: 0px 0px 0px 181px;
     background: url("./assets/bg-title-contact.png"), lightgray -1432.171px -108.115px / 298.913% 133.472% no-repeat;
+}
+
+.image-navi-studio-service {
+    height: auto;
+    display: block;
+    max-width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background: url("./assets/bg-service.png");
 }
 
 .animation-scrolling-rtl {
@@ -153,32 +155,4 @@ button {
     position: relative;
     right: 450px;
     top: 80px;
-}
-
-.svg {
-    top: -14rem;
-    left: 38.5rem;
-}
-
-.svg-other {
-    left: -5rem;
-    top: -29rem;
-}
-
-.left-svg {
-    /* position: relative;
-    left: 62rem;
-    bottom: 35rem; */
-    width: 248px;
-    height: 230px;
-    background-repeat: no-repeat;
-    background-image: url("./assets/P.png");
-}   
-
-.test {
-    width: 270px;
-    height: 72px;
-    border-radius: 43px;
-    background-color: black;
-    flex-direction: column;
 }
