[ADD] change value animation

--- a/src/index.css
+++ b/src/index.css
@@ -121,11 +121,6 @@ button {
     background: url("./assets/bg-services-marketing.png"), lightgray -9px -327.869px / 127.649% 272.306% no-repeat;
 }
 
-.artwork {
-    background: url("./assets/artworkheart.png");
-}
-
-
 .animation-scrolling-rtl {
     display: inline-block;
     padding-right: 2em;
@@ -150,12 +145,12 @@ button {
     }
 
     to {
-        transform: rotate(360deg);
+        transform: rotate(900deg);
     }
 }
 
 .animate-rotate {
-    animation: rotateAnimation 1s ease-in-out forwards;
+    animation: rotateAnimation 0.5s; 
 }
 
 .bg-contact {
