--- a/src/index.css
+++ b/src/index.css
@@ -145,12 +145,12 @@ button {
     }
 
     to {
-        transform: rotate(900deg);
+        transform: rotate(360deg);
     }
 }
 
 .animate-rotate {
-    animation: rotateAnimation 0.5s; 
+    animation: rotateAnimation 0.5s ease-in-out forwards;
 }
 
 .bg-contact {
