--- a/src/index.css
+++ b/src/index.css
@@ -165,3 +165,17 @@ button {
     right: 450px;
     top: 80px;
 }
+
+.test-1 {
+    border-radius: 138.5px 0px 0px 138.5px;
+    background: #C22E2E;
+}
+
+/* .test-2 {
+    display: flex;
+    width: 126px;
+    height: 154.852px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+} */
