--- a/src/index.css
+++ b/src/index.css
@@ -121,6 +121,14 @@ button {
     background: url("./assets/bg-services-marketing.png"), lightgray -9px -327.869px / 127.649% 272.306% no-repeat;
 }
 
+.image-navi-studio-porfolio {
+    height: auto;
+    display: block;
+    max-width: 100%;
+    border-radius: 0px 0px 290px 0px;
+    background: url("./assets/bg-portfolio.png")
+}
+
 .animation-scrolling-rtl {
     display: inline-block;
     padding-right: 2em;
@@ -170,12 +178,3 @@ button {
     border-radius: 138.5px 0px 0px 138.5px;
     background: #C22E2E;
 }
-
-/* .test-2 {
-    display: flex;
-    width: 126px;
-    height: 154.852px;
-    flex-direction: column;
-    justify-content: center;
-    flex-shrink: 0;
-} */
