--- a/src/index.css
+++ b/src/index.css
@@ -20,14 +20,16 @@ button {
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 20px;
+    height: 10px;
 }
 
 ::-webkit-scrollbar-track {
-    background: #FFF6E4;
+    background-image: url("./assets/pattern.png");
 }
 
 ::-webkit-scrollbar-thumb {
+    border-bottom-left-radius: 20px;
     background: #C22E2E;
 }
 
