[ADD] portfolio remake

--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ button {
 }
 
 .bg-pattern-portfolio {
-    background-image: url('./assets/pattern.png');
+    background-image: url('./assets/pattern-portfolio.png');
     background-repeat: no-repeat;
 }
 
