--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,7 @@ button {
 .bg-pattern-portfolio {
     background-image: url('./assets/pattern-portfolio.png');
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: left;
 }
 
 .star {
@@ -189,8 +189,13 @@ button {
     top: 80px;
 }
 
-/* 
+.bg-services-2 {
+    background-image: url("./assets/homeservices2.png");
+}
+
+
+
 .test-1 {
     border-radius: 138.5px 0px 0px 138.5px;
     background: #C22E2E;
-} */
+}
