--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ button {
     width: 40px;
 }
 
-.image-navi-studio {
+.image-navi-studio-home {
     background-image: url('./assets/bg-home.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -56,7 +56,7 @@ button {
     max-width: 100%;
 }
 
-.image-navi-studio-n-services {
+.image-navi-studio-navbar-services {
     background-image: url('./assets/bg-services-home.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -65,7 +65,7 @@ button {
     max-width: 100%;
 }
 
-.image-navi-studio-e-services {
+.image-navi-studio-navbar-ethics {
     background-image: url('./assets/bg-ethics.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -138,8 +138,7 @@ button {
     background: url("./assets/bg-title-contact.png"), lightgray -1432.171px -108.115px / 298.913% 133.472% no-repeat;
 }
 
-
-.image-navi-studio-service {
+.image-navi-studio-marketing-services {
     height: auto;
     display: block;
     max-width: 100%;
@@ -166,16 +165,6 @@ button {
     backdrop-filter: blur(6.5px);
 }
 
-.btn-contact-rel {
-    position: relative;
-    right: 450px;
-    top: 80px;
-}
-
-.bg-services-2 {
-    background-image: url("./assets/homeservices2.png");
-}
-
 .animation-scrolling-rtl {
     display: inline-block;
     padding-right: 2em;
@@ -194,7 +183,6 @@ button {
     }
 }
 
-
 @keyframes rotateAnimation {
     from {
         transform: rotate(0deg);
@@ -203,4 +191,12 @@ button {
     to {
         transform: rotate(360deg);
     }
+}
+
+.bg-cards {
+    background-image: url("./assets/bg-cards.png");
+}
+
+.bg-cards-2 {
+    background-image: url("./assets/bg-cards-2.png");
 }
