[ADD] change devis/contact refactor

--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,7 @@ button {
 }
 
 .bg-devis-blur {
-    background-image: url('./assets/bg-contact-blur.png');
+    background-image: url('./assets/bg-portfolio-blur.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
