--- a/src/index.css
+++ b/src/index.css
@@ -149,7 +149,7 @@ textarea {
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 0px 0px 154px 0px;
-    background-image: url("./assets/Rectangle86.png")
+    background-image: url("./assets/bg-rate.png")
 }
 
 .image-navi-studio-title-contact {
