--- a/src/index.css
+++ b/src/index.css
@@ -264,3 +264,33 @@ textarea {
     background-repeat: no-repeat;
     background-image: url("./assets/z.png");
 }
+
+.input-error {
+    animation: shake 0.5s ease-in-out;
+}
+
+@keyframes shake {
+    0% {
+        transform: rotate(0);
+    }
+
+    20% {
+        transform: rotate(10deg);
+    }
+
+    40% {
+        transform: rotate(-10deg);
+    }
+
+    60% {
+        transform: rotate(5deg);
+    }
+
+    80% {
+        transform: rotate(-5deg);
+    }
+
+    100% {
+        transform: rotate(0);
+    }
+}
