[ADD] rework logo text

--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ textarea {
 }
 
 .image-navi-studio-navbar-services {
-    background-image: url('./assets/bg-services-home.png');
+    background-image: url('./assets/bg-contact-blur.png');
     background-repeat: no-repeat;
     background-size: cover;
     height: auto;
