--- a/src/index.css
+++ b/src/index.css
@@ -214,7 +214,7 @@ textarea {
         transform: rotate(360deg);
     }
 }
-/* 
+
 .animation-scrolling-rtl {
     display: inline-block;
     padding-right: 2em;
@@ -231,8 +231,7 @@ textarea {
     100% {
         transform: translate3d(-100%, 0, 0);
     }
-} */
-
+}
 
 /* CARDS SERVICES */
 .bg-cards {
