[UPDATE] cursor pointer from select

--- a/src/index.css
+++ b/src/index.css
@@ -25,18 +25,15 @@ select {
 }
 
 a,
-label {
-    cursor: url('./Cursor/Cursor_2.svg'), pointer !important;
-}
-
 span,
 path,
 svg,
 button,
 label,
+select,
 img,
 li {
-    cursor: url('./Cursor/Cursor_2.svg'), pointer;
+    cursor: url('./Cursor/Cursor_2.svg'), pointer !important;
 }
 
 input[type="text"],
