--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Aoboshi+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Emblema+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap');
+@import url('https://db.onlinewebfonts.com/c/776348cc945339041ca98b13f4e7b43b?family=Gexo+Sans+Bold');
 
 @tailwind base;
 @tailwind components;
