[UPDATE] loader animate logo

--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,12 @@ textarea {
 }
 
 /* Blur */
+/* .bg-contact-blur {
+    background-image: url('./assets/bg-contact-blur.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+} */
+
 .bg-contact-blur {
     background-image: url('./assets/bg-contact-blur.png');
     background-repeat: no-repeat;
