--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@media not all and (min-resolution:.001dpcm) {
+    .fixed-media {
+        position: fixed !important;
+    }
+}
+
+
 @layer utilities {
     .h-my-screen {
         height: 80dvh;
