[ADD] work cookie

--- a/src/index.css
+++ b/src/index.css
@@ -319,3 +319,18 @@ textarea {
         transform: rotate(0);
     }
 }
+
+    .cookie-bar {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: #333;
+        /* Background color of the cookie bar */
+        color: #fff;
+        /* Text color */
+        padding: 10px;
+        text-align: center;
+        z-index: 999;
+        /* Ensure it's on top of other content */
+    }
