--- a/src/index.css
+++ b/src/index.css
@@ -310,17 +310,25 @@ textarea {
 
 
 .border-red-l {
-    border-left: 4px solid #C22E2E;
+    border-left: 3px solid #C22E2E;
 }
 
 .border-red-r {
-    border-right: 4px solid #C22E2E;
+    border-right: 3px solid #C22E2E;
 }
 
 .border-red-l-b {
-    border-left: 4px solid #FFF6E4;
+    border-left: 3px solid #FFF6E4;
 }
 
 .border-red-r-b {
-    border-right: 4px solid #FFF6E4;
+    border-right: 3px solid #FFF6E4;
+}
+
+.border-pink-l-r {
+    border-left: 3px solid #E18AB0;
+}
+
+.border-pink-r-r {
+    border-right: 3px solid #E18AB0;
 }
