--- a/src/index.css
+++ b/src/index.css
@@ -312,3 +312,8 @@ textarea {
         transform: rotate(0);
     }
 }
+
+.__react_modal_image__header {
+    padding-top: 15px;
+    padding-bottom: 10px;
+}
