--- a/src/index.css
+++ b/src/index.css
@@ -318,12 +318,27 @@ textarea {
     }
 }
 
+.__react_modal_image__modal_content {
+    background-color: rgba(23, 22, 20, 0.83) !important;
+}
+
 .__react_modal_image__header {
-    padding-top: 15px;
-    padding-bottom: 10px;
+    padding-top: 20px !important;
+    padding-right: 15px !important;
     background-color: rgba(0, 0, 0, -0.3) !important;
 }
 
-.__react_modal_image__icon_menu {
-    margin-right: 10px;
+.fadee-in {
+    opacity: 0;
+    animation: fade-in-animation 1s ease-in forwards;
+}
+
+@keyframes fade-in-animation {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
