--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,11 @@ textarea {
     border-width: 0 0 0 10px;
 }
 
+.test3 {
+    border-image: linear-gradient(#FFF6E4, #4457BE) 5;
+    border-width: 0 0 0 10px;
+}
+
 ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
@@ -328,9 +333,10 @@ textarea {
     background-color: rgba(0, 0, 0, -0.3) !important;
 }
 
-.fade-in {
+.fade-in-css {
     opacity: 0;
-    backdrop-filter: blur(10px);
+    /* backdrop-filter: blur(10px); */
+    background-color: #FFF6E4;
     animation: fade-in-animation 1s ease-in forwards;
 }
 
