--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,11 @@ textarea {
     border-width: 0 0 0 10px;
 }
 
+.test4 {
+    border-image: linear-gradient(#FFF6E4, #0C3E78) 5;
+    border-width: 0 0 0 10px;
+}
+
 ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
