update all code from portfolio

--- a/src/index.css
+++ b/src/index.css
@@ -96,11 +96,12 @@ textarea {
     max-width: 100%;
 }
 
-/* .bg-pattern-portfolio {
+.bg-pattern-portfolio {
     background-image: url('./assets/Pattern_navi.png');
     background-repeat: no-repeat;
+    /* background-position: left; */
     background-position: 39% 50%;
-} */
+}
 
 .star {
     margin-left: 10px;
@@ -155,7 +156,7 @@ textarea {
     height: auto;
     display: block;
     max-width: 100%;
-    border-radius: 0px 0px 290px 0px;
+    border-radius: 0px 0px 182px 0px;
     background: url("./assets/bg-portfolio.png")
 }
 
@@ -265,7 +266,6 @@ textarea {
 }
 
 .p {
-
     width: 248px;
     height: 230px;
     background-repeat: no-repeat;
@@ -319,22 +319,6 @@ textarea {
     background-color: rgba(0, 0, 0, -0.3) !important;
 }
 
-.fade-in-css {
-    opacity: 0;
-    /* backdrop-filter: blur(10px); */
-    background-color: #FFF6E4;
-    animation: fade-in-animation 1s ease-in forwards;
-}
-
-@keyframes fade-in-animation {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
 
 #logo.zoom-in {
     animation: zoomIn 1s ease-in-out;
