--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Emblema+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap');
 @import url('https://db.onlinewebfonts.com/c/776348cc945339041ca98b13f4e7b43b?family=Gexo+Sans+Bold');
-@import url('https://fonts.cdnfonts.com/css/cosmos');
+@import url('https://fonts.cdnfonts.com/css/aref-ruqaa');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.cosmos {
-    font-family: 'Cosmos', sans-serif;
-}
 
 html,
 body {
