update dev and designer

--- a/src/index.css
+++ b/src/index.css
@@ -298,6 +298,10 @@ textarea {
     background-image: url("./assets/picture-bannier-louisa.png")
 }
 
+.testttt {
+    background-image: url("./assets/test112.png")
+}
+
 .picture-bannier-melissa {
     height: auto;
     display: block;
