--- a/src/index.css
+++ b/src/index.css
@@ -106,10 +106,10 @@ textarea {
 }
 
 .bg-pattern-portfolio {
-    background-image: url('./assets/Pattern_navi.png');
+    background-image: url('./assets/pattern.png');
     background-repeat: no-repeat;
     /* background-position: left; */
-    background-position: 21% 50%;
+    background-position: 30% 50%;
 }
 
 .star {
